# KyberMulticore

./: Arduino_test_file.ino
Kyber_multicore/: CMakeLists.txt  blink.c  indcpa.c  randombytes.c  test_kyber_power_draw.c  test_kyber_separate.c  test_kyber_separate_deviations.c
Kyber_multicore_fgpt/: CMakeLists.txt  indcpa.c  kem.c  profile.c  profile.h  test_kyber.c  test_kyber_fgpt.c
Kyber_multicore_poe/: CMakeLists.txt  test_kyber_poe_decap.c  test_kyber_poe_encap.c
Kyber_multicore_rut/: CMakeLists.txt  indcpa.c  indcpa.h  mem_profile.c  mem_profile.h  polyvec.c  test_kyber_rut.c  test_kyber_separate.c  test_kyber_separate_deviations.c
Kyber_singlecore/: CMakeLists.txt  indcpa.c  test_kyber_power_draw.c  test_kyber_separate.c
Kyber_singlecore _rut/: CMakeLists.txt  cbd.c  mem_profile.c  mem_profile.h  test_kyber_rut.c
Kyber_singlecore_fgpt/: CMakeLists.txt  indcpa.c  profile.c  profile.h  test_kyber_fgpt.c  test_kyber_power_draw.c
Kyber_singlecore_poe/: CMakeLists.txt  polyvec.c  test_kyber_poe_keygen.c  test_kyber_power_draw.c  test_kyber_separate.c  test_kyber_separate_deviations.c
blink/: CMakeLists.txt  indcpa.c  kem.c  main.c  poly.c  polyvec.c
blink/nistkat/: PQCgenKAT_kem768
blink/test/: test_kyber768  test_speed768  test_vectors1024  test_vectors512  test_vectors768
blink_singlecore/: CMakeLists.txt  indcpa.c  main.c  randombytes.c
blink_singlecore/nistkat/: PQCgenKAT_kem1024  PQCgenKAT_kem512
blink_singlecore/test/: test_kyber1024  test_kyber512  test_speed1024  test_speed512
kyber512/: CMakeLists.txt
